# dlinf

./: .gitignore  Makefile  README.md  mkdocs.yml  pyproject.toml
benchmarks/: bench_kernels.cpp
benchmarks/results/: local_laptop_kernel_bench.jsonl
docs/: correctness.md  implementation.md  index.md  performance.md  resnet18_coverage.md  weight_archive_format.md
docs/implementation/: avgpool2d.md  basicblock.md  batchnorm2d.md  conv2d.md  linear.md  maxpool2d.md  resnet18.md  tensor_layout.md
include/dlinf/: activation.hpp  tensor.hpp  weight_archive.hpp
include/dlinf/blocks/: basicblock.hpp
include/dlinf/layers/: avgpool2d.hpp  batchnorm2d.hpp  conv2d.hpp  linear.hpp  maxpool2d.hpp
include/dlinf/networks/: resnet18.hpp
include/dlinf/ops/: elementwise.hpp
src/: avgpool2d.cpp  basicblock.cpp  batchnorm2d.cpp  conv2d.cpp  linear.cpp  main.cpp  maxpool2d.cpp  resnet18.cpp  weight_archive.cpp
support/: test_support.hpp
tests/: test_avgpool.cpp  test_basicblock.cpp  test_conv2d.cpp  test_conv_bn.cpp  test_elementwise.cpp  test_linear.cpp  test_maxpool.cpp  test_projection_basicblock.cpp  test_resnet18.cpp
tools/: audit_resnet18.py  elw_archive.py  export_avgpool_golden.py  export_basicblock_golden.py  export_conv_bn_golden.py  export_conv_golden.py  export_linear_golden.py  export_maxpool_golden.py  export_projection_basicblock_golden.py  export_resnet18_golden.py  plot_benchmarks.py  resnet18_common.py
